# AES42HAT

./: .gitignore  AES42HAT-bottom.pos  AES42HAT-job.gbrjob  AES42HAT.kicad_pcb  AES42HAT.kicad_prl  AES42HAT.kicad_pro  AES42HAT.kicad_sch  Coupled_Choke_Wuerth_74488540250.kicad_mod  Operation.md  README.md
Gerber/: AES42HAT-B_Fab.gbr  AES42HAT-F_Cu.gtl  AES42HAT-F_Silkscreen.gto  AES42HAT-In2_Cu.g2  AES42HAT-In3_Cu.g3  AES42HAT-In4_Cu.g4  AES42HAT-NPTH.drl  AES42HAT-PTH.drl  AES42HAT-job.gbrjob
dts/: AES42HAT.dts  AES42HAT.dtso  Makefile
fw/: .clangd  CMakeLists.txt  CS2000.lua  CS2000.sh  Operation.md  Readme.md  arm-none-eabi.toolchain.cmake  enter_isp.sh  manifest.txt  release-reset.sh
fw/cmake/: download_files.cmake
fw/linker/: lpc865.ld
fw/model/: ACOMP.yaml  ADC.yaml  ADC0.yaml  DMA.yaml  DMA0.yaml  FLASH_CTRL.yaml  FTM0.yaml  FTM1.yaml  GPIO.yaml  I2C.yaml  I2C0.yaml  I3C.yaml  I3C0.yaml  IOCON.yaml  LPC865.yaml  LPC865_clocks.yaml  MRT.yaml  MRT0.yaml  PINT.yaml  SPI.yaml  SRC4392.yaml  SWM0.yaml  USART.yaml  WKT.yaml  WWDT.yaml
fw/src/: CMakeLists.txt  channel.cpp  channel.cppm  channel.hpp  clkmgr.cpp  clkmgr.cppm  clkmgr.hpp  clocktree.hpp  coroutine.hpp  dma_drv.cpp  dma_drv.cppm  dma_drv.hpp  externs.h  ftm_drv.cpp  ftm_drv.cppm  ftm_drv.hpp  handler.cpp  handler.cppm  handler.hpp  i2c_tgt_drv.cpp  i2c_tgt_drv.cppm  i2c_tgt_drv.hpp  main.cpp  newlib_def.h  nvic_drv.cpp  nvic_drv.cppm  nvic_drv.hpp  pint_drv.cpp  pint_drv.cppm  pint_drv.hpp  queuering.cppm  queuering.hpp  registers.cpp  registers.hpp  spi_drv.cpp  spi_drv.cppm  spi_drv.hpp  spi_queue.cpp  spi_queue.cppm  spi_queue.hpp  (+14 more)
fw/tools/: generate_clocktree_header.py
hw/: AES42HAT-top.pos  AES42HAT.csv  AES42HAT.kicad_pcb  AES42HAT.kicad_prl  AES42HAT.kicad_pro  AES42HAT.kicad_sch  Coupled_Choke_Wuerth_74488540250.kicad_mod  Raspberry_Pi_HAT.kicad_mod  Transformer_Wuerth_74930030.kicad_mod  Wuerth_74930030.stp  lpc865m201jhi48.kicad_sym  src4392xpfb.kicad_sym
hw/Gerber/: AES42HAT-B_Cu.gbl  AES42HAT-B_Mask.gbs  AES42HAT-B_Paste.gbp  AES42HAT-B_Silkscreen.gbo  AES42HAT-Edge_Cuts.gm1  AES42HAT-F_Fab.gbr  AES42HAT-F_Mask.gts  AES42HAT-F_Paste.gtp  AES42HAT-In1_Cu.g1  Transcode Report.txt
temp/: MIC4417.kicad_sym
